<resources>
    <string name="app_name">NUMAD21S-AshwinAshok</string>
    <string name="about_button">About me</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="text_view_button_pressed_default">No button pressed!!</string>
    <string name="clicky_click_button">Clicky-click</string>
    <string name="clicky_click_back_button">Go back to home</string>
    <string name="url">Enter url</string>
    <string name="web_surf">Open</string>
    <string name="links_button">Links</string>
    <string name="update_url_button">Update</string>
    <string name="location_button_text">See your location</string>
    <string name="location_display_text">Click on the button to get your location.</string>
    <string name="get_location_button">Get your location!!</string>
    <string name="web_service_button">Web service</string>
    <string name="location_name_textview">Enter the city name</string>
    <string name="get_weather_button">Get weather!!</string>
    <string name="weather_details_text_view"></string>
</resources>